# pm-digital-employee

./: .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_VALIDATION_REPORT.py  DEPLOYMENT_VALIDATION_SUMMARY.md  DEPLOYMENT_VERIFICATION_COMPLETED.md  Dockerfile  FEISHU_INTEGRATION_GUIDE.md  LOCAL_DEPLOYMENT_AND_SELF_TEST_SUMMARY.md  LOCAL_DEPLOYMENT_GUIDE.md  MANIFEST.md  Makefile  QUICK_START_GUIDE.md  README.md  README_OPTIMIZATION.md  TRANSFORMATION_SUMMARY.md  VERSION.txt  alembic.ini  deploy.sh  docker-compose.yml  final_verification.py  init_db.sql  init_db_fixed.sql  manage.sh  mypy.ini  nginx.conf  package.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  start_dev.bat  start_dev.sh  test_excel_service.py  test_full_flow.py  test_report.md  (+1 more)
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_document_parse.py  20260419_b74edba22ea8_v1_2_0_add_multi_source_data_entry_.py
app/: __init__.py  main.py
app/agents/: __init__.py  base.py  planner_agent.py
app/ai/: __init__.py  llm_gateway.py  output_parser.py  prompt_manager.py  safety_guard.py  schemas.py
app/api/: __init__.py  cost.py  data_management.py  excel.py  health.py  lark_callback.py  lark_sheet.py  lark_webhook.py  risk.py  router.py  wbs.py
app/core/: __init__.py  config.py  dependencies.py  dependency.py  encryption.py  exceptions.py  log_sanitizer.py  logging.py  middleware.py  rate_limiter.py  unit_of_work.py  validation_config.py
app/db/: __init__.py  session.py
app/domain/: __init__.py  base.py  enums.py
app/events/: __init__.py  bus.py  handlers.py
app/integrations/: __init__.py  base_adapter.py
app/orchestrator/: __init__.py  dialog_state.py  intent_router.py  orchestrator.py  result_formatter.py  schemas.py  skill_manifest.py  skill_registry.py
app/presentation/: __init__.py  renderers.py
app/rag/: __init__.py  chunker.py  indexer.py  qa_service.py  reranker.py  retriever.py  schemas.py
app/repositories/: __init__.py  base.py  cost_repository.py  meeting_minutes_repository.py  milestone_repository.py  project_repository.py  risk_repository.py  task_repository.py  weekly_report_repository.py
app/security/: __init__.py  input_validator.py
app/services/: __init__.py  access_control_service.py  audit_service.py  context_service.py  cost_service.py  data_extractor_service.py  data_import_service.py  document_classifier_service.py  document_parse_service.py  excel_service.py  file_parser_service.py  idempotency_service.py  lark_sheet_sync_service.py  message_dispatch_service.py  milestone_service.py  notification_service.py  project_isolation_service.py  project_service.py  risk_service.py  session_service.py  sync_engine.py  task_service.py  validation_service.py  wbs_service.py  weekly_report_service.py
app/skills/: __init__.py  additional_skills.py  base.py  cost_monitor_skill.py  cost_skills.py  document_parse_skill.py  policy_qa_skill.py  project_overview_skill.py  risk_alert_skill.py  task_update_skill.py  weekly_report_skill.py
app/tasks/: __init__.py  celery_app.py  excel_tasks.py  lark_sheet_sync_tasks.py  report_tasks.py  tasks.py
app/tests/: __init__.py  test_end_to_end.py  test_lark_webhook.py  test_main.py  test_orchestrator.py  test_rag_retriever.py  test_security_modules.py  test_skills.py
app/utils/: __init__.py  crypto_utils.py  datetime_utils.py  docx_exporter.py  validators.py
docs/: Phase3-执行报告-0419.md  QUICK_START.md  README.md  feishu_integration.md  operations_runbook.md  security.md  v1.2-用户操作手册.md  企业微信操作手册.md  国有大行科技子公司项目管理数字员工需求规格说明书.md  文档分析与Claude开发指令体系.md  测试报告-v1.3.0.md  测试报告.md  自动化测试报告.md  项目代码深度分析报告.md
docs/api/: api_reference.md
docs/architecture/: architecture.md
docs/deployment/: DEPLOYMENT_CHECKLIST.md  GitHub-Actions配置说明.md  PM数字员工用户操作手册-v1.3.0.md  admin_manual.md  user_manual.md  wecom_integration.md
docs/design/: v1.2-多源数据录入设计方案.md  全文档智能解析与自动录入系统设计方案0419V3.0.md
pm_digital_employee/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
pm_digital_employee/alembic/: env.py  script.py.mako
pm_digital_employee/app/: __init__.py  main.py
pm_digital_employee/app/agents/: __init__.py
pm_digital_employee/app/ai/: __init__.py
pm_digital_employee/app/api/: __init__.py  health.py  router.py
pm_digital_employee/app/core/: __init__.py  config.py  exceptions.py  logging.py  middleware.py  security.py
pm_digital_employee/app/db/: __init__.py  session.py
pm_digital_employee/app/domain/: __init__.py  base.py
pm_digital_employee/app/events/: __init__.py
pm_digital_employee/app/integrations/: __init__.py
pm_digital_employee/app/orchestrator/: __init__.py
pm_digital_employee/app/presentation/: __init__.py
pm_digital_employee/app/rag/: __init__.py
pm_digital_employee/app/repositories/: __init__.py
pm_digital_employee/app/security/: __init__.py
pm_digital_employee/app/services/: __init__.py
pm_digital_employee/app/skills/: __init__.py
pm_digital_employee/app/tasks/: __init__.py
pm_digital_employee/app/tests/: __init__.py  test_health.py
pm_digital_employee/app/utils/: __init__.py
pm_digital_employee/scripts/: init_pgvector.sql
prompts/: document_classification.md  document_extraction.md  intent_recognition.md  meeting_minutes_extraction.md  risk_extraction.md  wbs_extraction.md  weekly_report_extraction.md
scripts/: backup_database.sh  bootstrap.sh  format.sh  health_check.sh  init_db.py  init_pgvector.sql  lark_ws_client.py  lint.sh  run_tests.sh  seed_demo_data.py  start_lark_ws.sh  token_utils.py
tests/: __init__.py  conftest.py  test_data_management.py  test_dependencies.py  test_encryption.py  test_excel_service.py  test_intent_optimization.py  test_intent_router.py  test_lark_bitable.py  test_lark_card_builder.py  test_lark_sheet_sync.py  test_lark_signature.py  test_message_flow.py  test_orchestrator.py  test_repository.py  test_sync_engine.py  test_unit_of_work.py  test_validation_service.py
ws_venv/: pyvenv.cfg
(+84 files in other folders)
