[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "pm-digital-employee"
version = "1.0.0"
description = "项目经理数字员工 - 国有大型银行科技子公司项目管理部智能助理系统"
authors = [
    {name = "PM Digital Employee Team", email = "pm-digital-employee@example.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.13"
keywords = ["fastapi", "project-management", "feishu", "digital-employee", "bank"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Office/Business :: Project Management",
]

dependencies = [
    # Web Framework
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.32.0,<0.33.0",
    "python-multipart>=0.0.18,<0.1.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.36,<3.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "alembic>=1.14.0,<2.0.0",
    "psycopg2-binary>=2.9.10,<3.0.0",

    # Vector Database (pgvector)
    "pgvector>=0.3.6,<0.4.0",

    # Data Validation
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "email-validator>=2.2.0,<3.0.0",

    # Async Task Queue
    "celery>=5.4.0,<6.0.0",
    "kombu>=5.4.0,<6.0.0",

    # Cache & Message Queue
    "redis>=5.2.0,<6.0.0",

    # HTTP Client
    "httpx>=0.28.0,<0.29.0",
    "aiohttp>=3.11.0,<4.0.0",

    # LLM Integration
    "openai>=1.57.0,<2.0.0",
    "anthropic>=0.39.0,<1.0.0",

    # Document Processing
    "python-docx>=1.1.2,<2.0.0",
    "jinja2>=3.1.4,<4.0.0",
    "markdown>=3.7,<4.0.0",
    "pypdf>=5.1.0,<6.0.0",

    # Security
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "cryptography>=44.0.0,<45.0.0",
    "pycryptodome>=3.21.0,<4.0.0",

    # Structured Logging
    "structlog>=25.0.0,<26.0.0",
    "python-json-logger>=3.2.0,<4.0.0",

    # Metrics & Monitoring
    "prometheus-client>=0.21.0,<1.0.0",

    # Utilities
    "python-dotenv>=1.0.1,<2.0.0",
    "tenacity>=9.0.0,<10.0.0",
    "orjson>=3.10.12,<4.0.0",
    "uuid6>=2024.7.10,<2025.0.0",
    "tzdata>=2024.2,<2025.0.0",
    "anyio>=4.6.2,<5.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<0.25.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "coverage>=7.6.0,<8.0.0",

    # Code Quality
    "ruff>=0.8.0,<0.9.0",
    "black>=24.10.0,<25.0.0",
    "mypy>=1.13.0,<2.0.0",
    "isort>=5.13.2,<6.0.0",
    "pre-commit>=4.0.0,<5.0.0",

    # Type Stubs
    "types-redis>=4.6.0,<5.0.0",
    "types-passlib>=1.7.4,<2.0.0",
    "types-python-jose>=3.3.4,<4.0.0",
]

docs = [
    "mkdocs>=1.6.0,<2.0.0",
    "mkdocs-material>=9.5.0,<10.0.0",
    "mkdocstrings[python]>=0.27.0,<0.28.0",
]

[project.scripts]
pm-digital-employee = "app.main:main"

# Ruff Configuration (Lint & Format)
[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    "migrations",
    "node_modules",
    "venv",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "RUF",    # Ruff-specific rules
    "S",      # flake8-bandit (security)
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EXE",    # flake8-executable
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "INP",    # flake8-no-pep420
    "PIE",    # flake8-pie
    "PYI",    # flake8-pyi
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "TID",    # flake8-tidy-imports
    "T20",    # flake8-print
    "PL",     # Pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "PERF",   # Perflint
    "FURB",   # refurb
    "LOG",    # flake8-logging
    "ANN",    # flake8-annotations
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "B008",    # do not perform function calls in argument defaults
    "C901",    # too complex
    "S101",    # assert used (allowed in tests)
    "S104",    # hardcoded bind all interfaces
    "S105",    # hardcoded password (handled by security check)
    "S106",    # hardcoded password field
    "S608",    # sql injection (handled by our security layer)
    "PLR0913", # too many arguments
    "PLR0915", # too many statements
    "TRY003",  # long exception message
    "ANN101",  # missing type annotation for self
    "ANN102",  # missing type annotation for cls
    "ANN401",  # dynamically typed expressions
    "COM812",  # trailing comma missing (conflict with formatter)
    "ISC001",  # single-line implicit string concatenation (conflict with formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ARG", "PLR2004", "ANN"]
"alembic/*" = ["ANN", "ARG"]
"scripts/*" = ["ANN", "T20"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
split-on-trailing-comma = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 15
max-returns = 6
max-statements = 50

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 100

# Black Configuration (Backup Formatter)
[tool.black]
target-version = ["py311"]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
    | node_modules
    | venv
)/
'''

# MyPy Configuration (Static Type Checker)
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true
disallow_untyped_decorators = true
disallow_subclassing_any = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
no_implicit_reexport = true
show_error_codes = true
show_error_context = true
show_traceback = true
pretty = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "kombu.*",
    "pgvector.*",
    "structlog.*",
    "passlib.*",
    "jose.*",
    "docx.*",
    "pypdf.*",
    "prometheus_client.*",
    "tests.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# Pytest Configuration
[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["app/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--cov=app",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=80",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "security: marks tests as security tests",
    "e2e: marks tests as end-to-end tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

# Coverage Configuration
[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "app/tests/*",
    "app/alembic/*",
    "app/main.py",
    "*/__init__.py",
]
concurrency = ["thread", "multiprocessing"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "@abstractmethod",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "except ImportError:",
    "except ModuleNotFoundError:",
]
fail_under = 80
precision = 2
show_missing = true

[tool.coverage.html]
directory = "htmlcov"
title = "PM Digital Employee Coverage Report"

# Bandit Security Configuration
[tool.bandit]
targets = ["app"]
exclude_dirs = ["app/tests"]
skips = ["B101", "B601"]

# Alembic Configuration hint
[tool.alembic]
# This is just a hint - actual config is in alembic.ini
script_location = "alembic"
prepend_sys_path = "."
version_path_separator = "os"